[boot] Cleanup arrays as list to list of in boot tests